--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -17,5 +17,8 @@ jobs:
       - name: Setup Clasp
         run: npm install -g @google/clasp
 
+      - name: Login Clasp
+        run: clasp login
+
       - name: Push to AppsScripts
         run: cd apps-scripts-code/ && clasp push
